--- a/installing_python.ipynb
+++ b/installing_python.ipynb
@@ -6,11 +6,25 @@
    "source": [
     "# Instructions for installing the GDS environment\n",
     "\n",
-    "### Introduction\n",
+    "### Key concepts\n",
+    "\n",
+    "*Python*: An open-source interpreted programming language that is extremely popular for data science and geography\n",
+    "\n",
+    "*Module*: An implementation of functionality that doesn't exist in basic Python, similar to R's packages. For instance, `numpy` implements fast numerical and array computations.\n",
+    "\n",
+    "*Dependency:* Often, modules depend on other modules. For instance, `pandas` implements dataframes in Python, and depends on `numpy`. `geopandas` adds a geographic layer to `pandas`, so it depends on `pandas` and itself on `numpy`.\n",
+    "\n",
+    "*Environment* : A Python installation with all the necessary modules to accomplish a desired functionality, where specific versions of each depndency are chosen to make everything compatible\n",
+    "\n",
+    "*Conda*: An open-source environment manager for Python. Does the work in the background to install environments where all dependencies are compatible between them\n",
+    "\n",
+    "*Anaconda*: the most popular implementation of Conda\n",
     "\n",
     "*Jupyter* = open-source software project developping services for interactive computing across different programming languages (core: **Ju**lia, **Py**thon, **R**)\n",
     "\n",
-    "*Jupyter Notebook* = web-based application you can run on your browser to create \"notebooks\" - single files that contain everything you need in a data workflow (more on this later)\n",
+    "*Jupyter Notebook* = web-based application you can run on your browser or in VSCode to create \"notebooks\" - single files that contain everything you need in a data workflow (more on this later)\n",
+    "\n",
+    "*VSCode:* the most popular code editor. We will be using it to work on our notebooks and run the code in Anaconda Python.\n",
     "\n",
     "[*JupyterLab*](https://jupyterlab.readthedocs.io/en/stable/) (what we are using here) = evolution of Jupyter Notebook"
    ]
@@ -23,62 +37,64 @@
     "\n",
     "These installation instructions are based on the  [installation instructions](https://gdsl-ul.github.io/soft_install/) by the Geographic Data Science Lab at the University of Liverpool. These are the instructions to install `gds_env`, an Anaconda Python environment designed for geographic data science which is curated by Dani Arribas-Bel.\n",
     "\n",
-    "If, for whatever reason, you did not manage to install everything or something is not working during the class, you can use [Binder](https://darribas.org/gds4ae/content/pages/infrastructure.html) to follow the lecture. Note that there is no way to save any changes you make to your local machine using Binder.\n",
-    "\n",
-    "For this course, it is recommended to install the GDS environment in a virtual container on **Docker**. Basically, what that means is that you don't need to install Python or any libraries on your local machine. It ensures that everyone can run the code in the same environment.\n",
-    "\n",
-    "Still, the environment can be installed locally on your machine, something which is necessary in some versions of Windows, and which might make starting up Python a bit more frictionless. For the sake of completeness, I provide instructions for both methods."
+    "We will install this environment natively on our machine using Anaconda and the .yaml files provided by Dani Arribas Bel in his github."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Native installation through Anaconda\n",
+    "## Native installation through Anaconda\n",
     "\n",
-    "The alternative way of installing the GDS environment is through a native Anaconda installation. \n",
+    "We will do a native installation of our environment using Anaconda. The first step is naturally to install Anaconda. \n",
     "\n",
-    "In order to follow this method, you should install the appropriate Anaconda version for your system from the [official webpage](https://www.anaconda.com/download). Once this is done, you should download the scripts from the [gds repository in GitHub](https://github.com/darribas/gds_env) that create the appropriate installation for your system. \n",
+    "You should install the appropriate Anaconda version for your system from the [official webpage](https://www.anaconda.com/download). Once this is done, we will use the `.yaml` files in the [gds repository in GitHub](https://github.com/darribas/gds_env) that create the appropriate installation for your system. \n",
     "\n",
-    "#### For Windows installations:\n",
-    "You should download [gds_py_win_installer.bat](https://github.com/darribas/gds_env/blob/v10.0/gds_py/gds_py_win_installer.bat). You should open \"Anaconda Prommpt\" and paste the contents of `gds_py_win_installer.bat` in the command line of Anaconda Prompt. This will create the environment as a local Anaconda environment, which will take a while. \n",
+    "### .yaml files\n",
     "\n",
-    "#### For MacOS installations:\n",
-    "In MacOS you can make use of the explicit file, in order to do so, you should download the files for your MacOS computer, depending on its CPU architecture. For Intel MacBooks, [gds_py_explicit_macos-latest.txt](https://github.com/darribas/gds_env/blob/v10.0/gds_py/gds_py_explicit_macos-latest.txt), while for ARM MacBooks (Those using M1/M2 family chips) it is [gds_py_explicit_macos-arm.txt](https://github.com/darribas/gds_env/blob/v10.0/gds_py/gds_py_explicit_macos-arm.txt). \n",
+    "These files contain the instructions for Anaconda to create your environment. It's basically a list of the modules you want. If it's a list, Conda tries to choose versions that are compatible with each other. It usually succeeds. If you want to replicate your exact environment in another computer, you can export an \"explicit\" .yaml file that states the exact versions of everything, but this is operating-system specific. \n",
     "\n",
-    "You should download this file to a location that you keep track of, and copy the path of the `explicit file.txt`, `path_to_explicit_file`, then do the following:\n",
+    "#### How to use the .yaml file:\n",
     "\n",
-    "Open the Terminal, and type:\n",
+    "If you have a .yaml file located at `path_to_explicit_file`, then you simply have to open the Anaconda Terminal and write: \n",
     "\n",
     "`conda create --name gds --file path_to_explicit_file`\n",
     "\n",
-    "It is possible that saving the explicit file in a `.txt` format gives problems, in previous years changing the file extension to `.rtf` (A different text format) solved the issue. \n",
+    "It is possible that saving the explicit file in a `.txt` format gives problems in Mac and Ubuntu, in previous years changing the file extension to `.rtf` (A different text format) solved the issue.\n",
+    "\n",
+    "### The .yaml file for our installation\n",
+    "\n",
+    "Once again, we will be using the .yaml files provided by Dani Arribas-Bel for his GDS environment. We will be using explicit files, so they are different for each operating system. \n",
+    "\n",
+    "#### For Windows installations:\n",
+    "\n",
+    "https://raw.githubusercontent.com/darribas/gds_env/refs/heads/master/env/py/gds_py_explicit_windows-latest.txt\n",
+    "\n",
+    "For windows, the Anaconda Terminal is the Anaconda Powershell Prompt\n",
+    "\n",
+    "#### For MacOS (M1 processor or later):\n",
+    "\n",
+    "https://raw.githubusercontent.com/darribas/gds_env/refs/heads/master/env/py/gds_py_explicit_macos-arm.txt\n",
+    "\n",
+    "For MacOS, the Anaconda terminal is the system terminal \n",
+    "\n",
+    "#### For MacOS (Intel processor):\n",
+    "\n",
+    "https://raw.githubusercontent.com/darribas/gds_env/refs/heads/master/env/py/gds_py_explicit_macos-latest.txt\n",
+    "\n",
+    "For MacOS, the Anaconda terminal is the system terminal \n",
+    "\n",
+    "#### For Ubuntu\n",
+    "\n",
+    "https://github.com/darribas/gds_env/blob/master/env/py/gds_py_explicit_ubuntu-latest.txt\n",
+    "\n",
+    "For Ubuntu, the Anaconda terminal is the system terminal \n",
+    "\n",
+    "### Installing GDS:\n",
+    "\n",
+    "You can run the above line, putting as `path_to_explicit_file` the corresponding URL. Otherwise, you can save the content in that URL to a text file locally in your machine, and direct the Anaconda terminal to that path in your machine.\n",
     "\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Installation through Docker\n",
-    "\n",
-    "You can do the docker installation on machines running recent versions of MacOS, compatible distributions of Linux, and Windows machines running Windows 10 or later, using WSL [(installation instructions)](https://learn.microsoft.com/en-us/windows/wsl/install). \n",
-    "\n",
-    "To install Docker, simply download the *Docker Desktop* executable from the [official webpage](https://www.docker.com/products/docker-desktop/) and install it in your computer. All the necessary instructions are [in the official guide](https://docs.docker.com/desktop/).\n",
-    "\n",
-    "Once Docker is installed in your machine, you can run Docker commands from the terminal application of choice in your machine (`Terminal` in MacOS and Linux, `Powershell` in Windows).\n",
-    "\n",
-    "In order to install the GDS environment, you should type the following command:\n",
-    "\n",
-    "`docker pull darribas/gds:10.0`\n",
-    "\n",
-    "This will take a while since it has do download large amounts of data. Once it is complete, you can check the success of the installation by typing the instruction \n",
-    "\n",
-    "`docker image ls`\n",
-    "\n",
-    "which prints a list of all installed containers (GDS 10.0 should appear in this list).\n",
     "\n"
    ]
   },
