--- a/installing_python.ipynb
+++ b/installing_python.ipynb
@@ -94,17 +94,12 @@
     "\n",
     "You can run the above line, putting as `path_to_explicit_file` the corresponding URL. Otherwise, you can save the content in that URL to a text file locally in your machine, and direct the Anaconda terminal to that path in your machine.\n",
     "\n",
+    "Imagine that I am using windows and I save that file to my downloads folder. Then, I would write:\n",
+    "\n",
+    "\n",
+    "`conda create --name gds --file C:/Users/a-sanc34/Downloads/gds_explicit_file.txt`\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### For Linux installations:\n",
-    "\n",
-    "For a native Anaconda installation of the GDS environment in Linux, you can use the same method as for MacOS, using the [gds_py_explicit_ubuntu-latest.txt](https://github.com/darribas/gds_env/blob/v10.0/gds_py/gds_py_explicit_ubuntu-latest.txt) file. The caveat of the `.txt` and `.rtf` extensions may or may not apply, since this has not been encountered by me in previous years.  "
    ]
   }
  ],
