--- a/session1.ipynb
+++ b/session1.ipynb
@@ -65,8 +65,7 @@
     "y = 2.5\n",
     "print(type(y))\n",
     "v = 100 < 10\n",
-    "print(type(v))\n",
-    "print(v)"
+    "print(type(v))"
    ]
   },
   {
@@ -168,6 +167,29 @@
    "source": [
     "x.append(2.5) # adding a value to a list\n",
     "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d4db0855",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]; b = [3, 4, 5]\n",
+    "c = a + b #join two lists\n",
+    "c"
    ]
   },
   {
@@ -428,6 +450,96 @@
   },
   {
    "cell_type": "markdown",
+   "id": "139b5109",
+   "metadata": {},
+   "source": [
+    "#### List comprehensions\n",
+    "\n",
+    "Python has a syntax called list comprehensions which allows to quickly write operations that would otherwise only be performed in a loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "642ba2be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, True, True, True, True, True]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [2, 3, 5, 7, 9, 4, 6]\n",
+    "#check if elements are greater or equal than 4 in a loop\n",
+    "a_geq_4_loop = []\n",
+    "for x in a:\n",
+    "    a_geq_4_loop.append(x >= 4)\n",
+    "a_geq_4_loop\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "04242fe6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, True, True, True, True, True]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check if elements are greater or equal than 4 in a list comprehension: One line of code instead of three!\n",
+    "a_geq_4 = [x >= 4 for x in a]\n",
+    "a_geq_4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3ced9cc",
+   "metadata": {},
+   "source": [
+    "Another example: conditionals inside of a list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "02058961",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3', '2', '4', '5', '7', '9']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['3', 2, '4', 5, 7, 9]\n",
+    "a_str = [str(x) if not type(x) == str else x for x in a]\n",
+    "a_str"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "chronic-arlington",
    "metadata": {},
    "source": [
@@ -542,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "common-winning",
    "metadata": {},
    "outputs": [
@@ -552,7 +664,7 @@
        "set"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,8 +675,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7ab248d",
+   "metadata": {},
+   "source": [
+    "You can check the common elements between two sets:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "golden-islam",
    "metadata": {},
    "outputs": [
@@ -574,7 +694,7 @@
        "{'b'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,6 +702,64 @@
    "source": [
     "s2 = {'b','c'}\n",
     "s1.intersection(s2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5c205b7",
+   "metadata": {},
+   "source": [
+    "You can join two sets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6bb7f6d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a', 'b', 'c'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.union(s2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6e347cf",
+   "metadata": {},
+   "source": [
+    "You can check the elements of set 1 not present in set 2:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d4294b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.difference(s2)"
    ]
   },
   {
@@ -667,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "reserved-boulder",
    "metadata": {},
    "outputs": [
@@ -684,7 +862,7 @@
    "source": [
     "animals = ['dog','cat','bird']\n",
     "for animal in animals:\n",
-    "    print(f\"The plural of {animal} is {animal + 's'}\")"
+    "    print(f\"The plural of {animal} is {animal}s\")"
    ]
   },
   {
@@ -755,10 +933,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "country_dict= {'Japan' : 'Tokyo', \n",
-    "'Korea' : 'Seoul', \n",
-    "'China' : 'Beijing'}\n",
-    "\n"
+    "country_dict= {\n",
+    "    'Japan' : 'Tokyo', \n",
+    "    'Korea' : 'Seoul', \n",
+    "    'China' : 'Beijing'\n",
+    "}"
    ]
   },
   {
@@ -2127,7 +2306,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "gds",
    "language": "python",
    "name": "python3"
   },
@@ -2142,11 +2321,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.18"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "682183d1e1ea710cdea3a31eb6787b575e9eca5ed909d8154604d7d2a5c5c515"
-   }
   }
  },
  "nbformat": 4,
