remove references to docker and remote jupyter servers

--- a/running_python.ipynb
+++ b/running_python.ipynb
@@ -20,45 +20,9 @@
     "\n",
     "### Set-up\n",
     "\n",
-    "Please make sure you have followed the [installation instructions](https://gdsl-ul.github.io/soft_install/). Note that you should install gds version 8.0, not 6.1, that's a typo in the webpage.\n",
+    "Please make sure you have followed the installation instructions. \n",
     "\n",
-    "If, for whatever reason, you did not manage to install everything or something is not working during the class, you can use [Binder](https://darribas.org/gds4ae/content/pages/infrastructure.html) to follow the lecture. Note that there is no way to save any changes you make to your local machine using Binder.\n",
-    "\n",
-    "For this course, we are using a virtual container on **Docker**. Basically, what that means is that you don't need to install Python or any libraries on your local machine. It ensures that everyone can run the code in the same environment.\n",
-    "\n",
-    "### To run Python on JypyterLab through Docker:\n",
-    "\n",
-    "1. Open the terminal of your computer: Terminal (for Mac) or PowerShell (for windows) and choose the base folder where you want to initialize Jupyter Notebook. For example, imagine I have the notebooks I want to run on Google Drive (Drive letter G:) in a folder called `stuff_for_gds4ae`:\n",
-    "Then, I would run:\n",
-    "\n",
-    "\n",
-    "`G:`\n",
-    "\n",
-    "and then:\n",
-    "\n",
-    "`cd stuff_for_gds4ae`\n",
-    "\n",
-    "This will define which is the `work` directory that will come up later. If you have uglier folder systems, you should put them between brackets, for instance, in my case I have to write:\n",
-    "\n",
-    "`H:`\n",
-    "\n",
-    "`cd 'My Drive\\CEMFI\\2022_PhD\\gds4ae_practice_23'`\n",
-    "\n",
-    "2. After this, we are ready to run docker. Copy the following command in your Terminal (for Mac) or PowerShell (for Windows):\n",
-    "\n",
-    "`docker run --rm -ti -p 8888:8888 -v ${PWD}:/home/jovyan/work darribas/gds:10.0`\n",
-    "\n",
-    "![docker_run1.jpg](.jpgs/docker_run.jpg)\n",
-    "\n",
-    "2. Open `localhost:8888` in your browser and paste the token shown in the output text of the terminal.\n",
-    "\n",
-    "![docker_run1.jpg](.jpgs/docker_run_two.jpg)\n",
-    "\n",
-    "Don't close either docker nor the terminal while your session is running. If you do, it will automatically expire, kernels are shut down and all unsaved changes will be lost.\n",
-    "\n",
-    "### Running Jupyter Lab if you installed it natively in Anaconda\n",
-    "\n",
-    "If you are on Windows Home and you cannot use WSL and Docker, you must have installed the `gds` environment natively. Don't worry, most likely you will have no problems (It's a tradeoff between compatibility and convenience), but for you the procedure is a bit different:\n",
+    "### Running Jupyter Lab on your browser\n",
     "\n",
     "1. Open the Anaconda terminal (Anaconda Powershell Prompt in Windows)\n",
     "\n",
@@ -100,34 +64,9 @@
     "\n",
     "![folder.jpg](.jpgs/folder.jpg)\n",
     "\n",
+    "### Connecting to the Jupyter server\n",
     "\n",
-    "2. Once this is done, we have two paths:\n",
-    "\n",
-    "### If you are using the Docker installation\n",
-    "\n",
-    "1. Follow the steps of starting a Jupyter Notebook session up to the point where you get the link that you are supposed to paste in your browser. \n",
-    "\n",
-    "2. Press  `Ctrl + Shift + P` in VSCode, and in the search bar, type and select: `Jupyter: Specify Jupyter Server for Connections`\n",
-    "\n",
-    "    1. ![jupyter_search.jpg](.jpgs/jupyter_search.JPG)\n",
-    "\n",
-    "    2. ![existing_url.jpg](.jpgs/existing_url.JPG)\n",
-    "\n",
-    "    3. ![URL_pasted.JPG!](URL_pasted.JPG)\n",
-    "\n",
-    "3. Open one of your notebooks in the directory from VSCode, now, in the top-right corner, you should have an option to choose a Jupyter Kernel:\n",
-    "\n",
-    "    1. ![option_choose_kernel.jpg](.jpgs/option_choose_kernel.JPG)\n",
-    "\n",
-    "    2. Once you click on that, you will get a list of available Jupyter kernels. Since you have pasted the URL for your remote kernel in the right place, it should appear on the list:\n",
-    "\n",
-    "    ![remote_jupyter_kernel.jpg](.jpgs/remote_jupyter_kernel.JPG)\n",
-    "\n",
-    "4. Once all of this is done, you are ready to go, your notebook will execute in the environment that you installed in Docker.\n",
-    "\n",
-    "### If you had to do a native Anaconda installation\n",
-    "\n",
-    "In this case, things are easier: When you open the notebook, on the top-right corner, you should have `gds` in your list of available Jupyter servers, without the need to intialize the Jupyter kernel. Alternatively, you can initialize the Jupyter kernel from the Anaconda prompt, and use its URL in VSCode as if it were a remote Jupyter kernel. "
+    "On the top-right corner, you should have `gds` in your list of available Jupyter servers, without the need to intialize the Jupyter kernel. Alternatively, you can initialize the Jupyter kernel from the Anaconda prompt, and use its URL in VSCode as if it were a remote Jupyter kernel. "
    ]
   },
   {
