update installation instructions

--- a/installing_python.ipynb
+++ b/installing_python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Instructions for installing the GDS environment\n",
+    "# Instructions for installing the gds4eco environment\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -33,71 +33,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set-up\n",
-    "\n",
-    "These installation instructions are based on the  [installation instructions](https://gdsl-ul.github.io/soft_install/) by the Geographic Data Science Lab at the University of Liverpool. These are the instructions to install `gds_env`, an Anaconda Python environment designed for geographic data science which is curated by Dani Arribas-Bel.\n",
-    "\n",
-    "We will install this environment natively on our machine using Anaconda and the .yaml files provided by Dani Arribas Bel in his github."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Native installation through Anaconda\n",
+    "## Installing the gds4eco environment using Anaconda and a .yml file\n",
     "\n",
     "We will do a native installation of our environment using Anaconda. The first step is naturally to install Anaconda. \n",
     "\n",
-    "You should install the appropriate Anaconda version for your system from the [official webpage](https://www.anaconda.com/download). Once this is done, we will use the `.yaml` files in the [gds repository in GitHub](https://github.com/darribas/gds_env) that create the appropriate installation for your system. \n",
+    "You should install the appropriate Anaconda version for your system from the [official webpage](https://www.anaconda.com/download). Once this is done, we will use the .yml file provided by Carmen Cabrera Arnau for the `gds4eco` course, which you can download from [this link in the github repository of this small course](https://raw.githubusercontent.com/TheLeache/gds4ae_practice_23/refs/heads/main/env/gds4eco.yml)\n",
     "\n",
     "### .yaml files\n",
     "\n",
-    "These files contain the instructions for Anaconda to create your environment. It's basically a list of the modules you want. If it's a list, Conda tries to choose versions that are compatible with each other. It usually succeeds. If you want to replicate your exact environment in another computer, you can export an \"explicit\" .yaml file that states the exact versions of everything, but this is operating-system specific. \n",
+    "These files contain the instructions for Anaconda to create your environment. It's basically a list of the dependencies you want to install, usually with the specific versions, to ensure the compatibility and replicability of the environment you are using. \n",
+    "\n",
+    "For instance, if you are running lots of Python code for a research paper, you would produce a .yml file that replicates the Python environment you used, and you would include it in your replication package. That way, the data editor in a journal could install the same Python environment you used in your project, and verify that the code produces the same results without running into errors. \n",
+    "\n",
+    "Another use would be if a team is producing Python software. Then, they would have to make sure they are using the same dependencies to not run into compatibility problems. They could use Anaconda to install the same environment across all the machines that the team is using. \n",
     "\n",
     "#### How to use the .yaml file:\n",
     "\n",
     "If you have a .yaml file located at `path_to_explicit_file`, then you simply have to open the Anaconda Terminal and write: \n",
     "\n",
-    "`conda create --name gds --file path_to_explicit_file`\n",
+    "`conda env create --name env_name --file path_to_explicit_file.yml`\n",
     "\n",
-    "It is possible that saving the explicit file in a `.txt` format gives problems in Mac and Ubuntu, in previous years changing the file extension to `.rtf` (A different text format) solved the issue.\n",
+    "### Installing gds4eco:\n",
     "\n",
-    "### The .yaml file for our installation\n",
+    "You can run the above line, putting as `path_to_explicit_file` the URL above. Otherwise, you can save the content in that URL to a text file locally in your machine, and direct the Anaconda terminal to that path in your machine.\n",
     "\n",
-    "Once again, we will be using the .yaml files provided by Dani Arribas-Bel for his GDS environment. We will be using explicit files, so they are different for each operating system. \n",
+    "The line would be as such: \n",
     "\n",
-    "#### For Windows installations:\n",
+    "`conda env create --name gds4ae --file https://raw.githubusercontent.com/TheLeache/gds4ae_practice_23/refs/heads/main/env/gds4eco.yml`\n",
     "\n",
-    "https://raw.githubusercontent.com/darribas/gds_env/refs/heads/master/env/py/gds_py_explicit_windows-latest.txt\n",
+    "Otherwise, you can download the file locally to your machine, and run it from the local file. For instance, if I download it to `G:/My Drive/CEMFI/2020_PhD/gds4ae_practice_23/env/gds4eco.yml`, I would set Anaconda to the G: drive like so: \n",
     "\n",
-    "For windows, the Anaconda Terminal is the Anaconda Powershell Prompt\n",
+    "`cd G:`\n",
     "\n",
-    "#### For MacOS (M1 processor or later):\n",
+    "and then I would run the line:\n",
     "\n",
-    "https://raw.githubusercontent.com/darribas/gds_env/refs/heads/master/env/py/gds_py_explicit_macos-arm.txt\n",
+    "`conda env create --name gds4ae --file \"My Drive/CEMFI/2020_PhD/gds4ae_practice_23/env/gds4eco.yml\"`\n",
     "\n",
-    "For MacOS, the Anaconda terminal is the system terminal \n",
-    "\n",
-    "#### For MacOS (Intel processor):\n",
-    "\n",
-    "https://raw.githubusercontent.com/darribas/gds_env/refs/heads/master/env/py/gds_py_explicit_macos-latest.txt\n",
-    "\n",
-    "For MacOS, the Anaconda terminal is the system terminal \n",
-    "\n",
-    "#### For Ubuntu\n",
-    "\n",
-    "https://github.com/darribas/gds_env/blob/master/env/py/gds_py_explicit_ubuntu-latest.txt\n",
-    "\n",
-    "For Ubuntu, the Anaconda terminal is the system terminal \n",
-    "\n",
-    "### Installing GDS:\n",
-    "\n",
-    "You can run the above line, putting as `path_to_explicit_file` the corresponding URL. Otherwise, you can save the content in that URL to a text file locally in your machine, and direct the Anaconda terminal to that path in your machine.\n",
-    "\n",
-    "Imagine that I am using windows and I save that file to my downloads folder. Then, I would write:\n",
-    "\n",
-    "\n",
-    "`conda create --name gds --file C:/Users/a-sanc34/Downloads/gds_explicit_file.txt`\n",
     "\n",
     "\n"
    ]
