--- a/installing_python.ipynb
+++ b/installing_python.ipynb
@@ -57,6 +57,16 @@
     "\n",
     "You can run the above line, putting as `path_to_explicit_file` the URL above. Otherwise, you can save the content in that URL to a text file locally in your machine, and direct the Anaconda terminal to that path in your machine.\n",
     "\n",
+    "#### Anaconda terminal for Windows:\n",
+    "\n",
+    "If you use Windows, you should type in the search bar \"Anaconda Powershell Prompt\" and run it. \n",
+    "\n",
+    "#### Anaconda terminal in Mac and Ubuntu: \n",
+    "\n",
+    "If you use a Unix sytem like Mac or Ubuntu, you should open your computer's Terminal. Once you have Anaconda installed, you can run conda commands from it. \n",
+    "\n",
+    "### You can install the new environment with a simple line: \n",
+    "\n",
     "The line would be as such: \n",
     "\n",
     "`conda env create --name gds4ae --file https://raw.githubusercontent.com/TheLeache/gds4ae_practice_23/refs/heads/main/env/gds4eco.yml`\n",
@@ -68,6 +78,8 @@
     "and then I would run the line:\n",
     "\n",
     "`conda env create --name gds4ae --file \"My Drive/CEMFI/2020_PhD/gds4ae_practice_23/env/gds4eco.yml\"`\n",
+    "\n",
+    "### You can check more information about package management [here in the official documentation](https://docs.conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html)\n",
     "\n",
     "\n",
     "\n"
